Fix scrollbar and footer position

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  height: 23px;
+  height: 35px;
   font-size: 11px;
   padding: 0 7px;
 
@@ -15,6 +15,7 @@
     justify-content: center;
     align-items: center;
     margin-right: auto;
+    width: 100%;
   }
 
   .app-name {
