--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -21,7 +21,7 @@ body {
 
   .content-main-container {
     display: flex;
-    height: calc(100vh - 65px);
+    height: calc(100vh - 85px);
 
     .content-container {
       width: 100%;
