--- a/src/themes/components/footer.scss
+++ b/src/themes/components/footer.scss
@@ -1,12 +1,13 @@
 .comp_footer {
     background: $primaryBackgroundColor;
     border-top: 1px solid $footerBorderColor;
+    position: relative;
 
     .app-name {
-      color: $primaryTextColor;
+        color: $primaryTextColor;
 
-      small {
-        color: $primaryGhostTextColor;
-      }
+        small {
+            color: $primaryGhostTextColor;
+        }
     }
-  }
+}
