--- a/src/themes/theme.scss
+++ b/src/themes/theme.scss
@@ -1,2 +1,6 @@
+html {
+    overflow: hidden;
+}
+
 @import "./dark";
 @import './light';
